pulseaudio-policy-enforcement (0.5.29) unstable; urgency=low

  * Support for context variables

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Sun, 12 Jul 2009 20:30:00 +0300

pulseaudio-policy-enforcement (0.5.28) unstable; urgency=low

  * Fix D-Bus memory leak for othermedia info messages (ie. for cases when
    paplay is used)
  * Beside card name consider the supported profiles at Bluetooth card
    classification

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Thu, 02 Jul 2009 17:40:00 +0300

pulseaudio-policy-enforcement (0.5.27) unstable; urgency=low

  * Temporarily setting 'sink.null' as the default null-sink-name to be able.
  * Mute-by-route support.

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Thu, 25 Jun 2009 12:44:42 +0300

pulseaudio-policy-enforcement (0.5.26) unstable; urgency=low

  * Bumping version number for a new release

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Fr, 12 Jun 2009 16:00:00 +0300

pulseaudio-policy-enforcement (0.5.24) unstable; urgency=low

  * Bumping version number for a new PA release

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Mon, 08 Jun 2009 16:00:00 +0300

pulseaudio-policy-enforcement (0.5.23) unstable; urgency=low

  * Disabling volume limit setting (just muting/unmuting)

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Fri, 05 Jun 2009 19:33:31 +0300

pulseaudio-policy-enforcement (0.5.22) unstable; urgency=low

  * Added support for maemo-launche(r)d process classification.
  * narrowing the scope of NameOwnerChanged D-Bus signal to org.freedesktop.ohm

 -- Krisztian Litkey <krisztian.litkey@nokia.com>  Thu, 14 May 2009 19:33:31 +0300

pulseaudio-policy-enforcement (0.5.21) unstable; urgency=low

  * media active/inactive notification in othermedia group
  * name field in the registration message

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Thu, 14 May 2009 16:00:00 +0300

pulseaudio-policy-enforcement (0.5.20) unstable; urgency=low

  * bumping version number for PA release
